// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cursor style pagination > should return first page correctly 1`] = `
{
  "comments": [
    {
      "children": {
        "cursor": 41,
        "data": [
          {
            "id": 41,
          },
        ],
        "hasMore": false,
        "total": 1,
      },
      "data": {
        "id": 4,
      },
    },
    {
      "children": {
        "cursor": 0,
        "data": [],
        "hasMore": false,
        "total": 0,
      },
      "data": {
        "id": 3,
      },
    },
  ],
  "cursor": 3,
  "hasMore": true,
  "total": 12,
}
`;

exports[`cursor style pagination > should return second page correctly 1`] = `
{
  "comments": [
    {
      "children": {
        "cursor": 23,
        "data": [
          {
            "id": 21,
          },
          {
            "id": 22,
          },
          {
            "id": 23,
          },
        ],
        "hasMore": false,
        "total": 3,
      },
      "data": {
        "id": 2,
      },
    },
    {
      "children": {
        "cursor": 13,
        "data": [
          {
            "id": 11,
          },
          {
            "id": 12,
          },
          {
            "id": 13,
          },
        ],
        "hasMore": true,
        "total": 4,
      },
      "data": {
        "id": 1,
      },
    },
  ],
  "cursor": 1,
  "hasMore": false,
  "total": 12,
}
`;

exports[`cursor style pagination > should work with created_asc 1`] = `
{
  "comments": [
    {
      "children": {
        "cursor": 13,
        "data": [
          {
            "id": 11,
          },
          {
            "id": 12,
          },
          {
            "id": 13,
          },
        ],
        "hasMore": true,
        "total": 4,
      },
      "data": {
        "id": 1,
      },
    },
    {
      "children": {
        "cursor": 23,
        "data": [
          {
            "id": 21,
          },
          {
            "id": 22,
          },
          {
            "id": 23,
          },
        ],
        "hasMore": false,
        "total": 3,
      },
      "data": {
        "id": 2,
      },
    },
    {
      "children": {
        "cursor": 0,
        "data": [],
        "hasMore": false,
        "total": 0,
      },
      "data": {
        "id": 3,
      },
    },
  ],
  "cursor": 3,
  "hasMore": true,
  "total": 12,
}
`;

exports[`get more children with cursor > should return first page correctly 1`] = `
{
  "cursor": 16,
  "data": [
    {
      "id": 17,
    },
    {
      "id": 16,
    },
  ],
  "hasMore": true,
}
`;

exports[`get more children with cursor > should return second page correctly 1`] = `
{
  "cursor": 14,
  "data": [
    {
      "id": 15,
    },
    {
      "id": 14,
    },
  ],
  "hasMore": true,
}
`;

exports[`get more children with cursor > should work with created_asc 1`] = `
{
  "cursor": 13,
  "data": [
    {
      "id": 11,
    },
    {
      "id": 12,
    },
    {
      "id": 13,
    },
  ],
  "hasMore": true,
}
`;
